@@ -3,6 +3,9 @@ Revision history for Net::DNS                                     -*-text-*-
 =============================
 *** 0.59_1 UNRELEASED
 
+Fix rt 22334
+    Fixed "perl Makefile.PL --xs" behavior, patch by Tamas Palfalvi
+
 Fix rt 21752
     Applied the patch supplied by Alexandr Ciornii to be able
     to compile on ActiveState perl .
